# vaudit2.0

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.planning/: PROJECT.md
frontend/: .env.example  .env.production  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  start.sh  tailwind.config.js
frontend/public/: manifest.json
frontend/src/: App.tsx  Routes.tsx
frontend/src/components/: ProtectedRoute.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/hooks/: useAnalysis.ts
frontend/src/services/: api.ts  auth.ts  documents.ts  history.ts  index.ts
frontend/src/styles/: tailwind.css
src/: __init__.py
src/api/: dependencies.py  main.py
src/api/routes/: admin.py  auth.py  documents.py  health.py  history.py  validate.py
src/cli/: __init__.py  create_admin.py
src/domain/rules/: __init__.py
src/domain/schemas/: __init__.py  auth.py  document.py  evidence.py  extraction.py  history.py  user.py  validation.py
src/domain/services/: auth.py  (+2 more)
src/pipeline/: __init__.py  extraction.py  file_storage.py
src/storage/: __init__.py  database.py  models.py
tests/: __init__.py  conftest.py  test_auth_admin.py  test_auth_integration.py  test_auth_login.py  test_auth_password.py  test_date_parser.py  test_documents.py  test_extraction.py  test_grounding_megger_calibration.py  test_grounding_resistance.py  test_history.py  test_megger_validators.py  test_phase_delta.py  test_test_method.py  test_thermography_validation.py  test_validate_integration.py  test_validation_endpoint.py  test_validators.py
(+36 files in other folders)
