[project]
name = "auditeng-v2"
version = "0.1.0"
description = "Autonomous document audit engineering system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.0",
    "uvicorn[standard]>=0.34.0",
    "sqlmodel>=0.0.31",
    "aiosqlite>=0.21.0",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.9",
    "python-jose[cryptography]>=3.5.0",
    "pwdlib[bcrypt]>=0.3.0",
    "python-multipart>=0.0.18",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.6.0",
    "email-validator>=2.0.0",
    "jinja2>=3.1.4",
    "aiofiles>=24.1.0",
    "python-dotenv>=1.0.0",
    "landingai-ade>=1.4.0",  # For Phase 2
    "anthropic>=0.76.0",  # For Phase 3
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.14.13",
    "mypy>=1.13.0",
    "pre-commit>=4.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
